# Assignment-4-Search-Engine

./: AVLTree.h  Answers.md  CMakeLists.txt  DocumentParser.cpp  DocumentParser.h  Index.cpp  Query.cpp  Query.h  README.md  UserInterface.cpp  UserInterface.h  docsPersist.txt  document.h  index.h  main.cpp  test_AVLTree.cpp  test_Index.cpp  test_Query.cpp
